{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 235,
  "lineage": "3a1537ef-a895-4897-a79a-6a204ecc79bc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.198.40.0",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-08-14T03:31:54.536-07:00",
            "id": "projects/iconic-monitor-468401-k0/regions/southamerica-east1/addresses/ip-saida-vitacare",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ip-saida-vitacare",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "iconic-monitor-468401-k0",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/addresses/ip-saida-vitacare",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/routers/router-hub-nat"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/instanceGroups/mig-proxy-vitacare",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-08-20T08:16:18.611-07:00",
            "enable_cdn": false,
            "fingerprint": "pX5q2C1cS2E=",
            "generated_id": 2640558721407146029,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/healthChecks/http-proxy-health-check"
            ],
            "iap": [
              {
                "oauth2_client_id": "478840418464-1vbclttbb8e99eitito39u8nubp5frlv.apps.googleusercontent.com",
                "oauth2_client_secret": "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",
                "oauth2_client_secret_sha256": "384e72d44268402e0e9a638317c9255c55a7c85ad0ad71cd2bd3d5b593ad7ef7"
              }
            ],
            "id": "projects/iconic-monitor-468401-k0/global/backendServices/backend-service-proxy-global",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-service-proxy-global",
            "port_name": "http",
            "project": "iconic-monitor-468401-k0",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/backendServices/backend-service-proxy-global",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "iap"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "oauth2_client_secret"
              }
            ]
          ],
          "dependencies": [
            "data.google_project.project",
            "google_artifact_registry_repository.proxy_repo",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.proxy_template",
            "google_compute_network.vpc_hub",
            "google_compute_region_instance_group_manager.mig_proxy",
            "google_compute_subnetwork.subnet_hub",
            "google_iap_brand.project_brand",
            "google_iap_client.iap_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_lb_and_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-14T03:32:04.532-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iconic-monitor-468401-k0/global/firewalls/allow-lb-and-health-check",
            "log_config": [],
            "name": "allow-lb-and-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "priority": 1000,
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/firewalls/allow-lb-and-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "proxy-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-14T03:32:04.552-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iconic-monitor-468401-k0/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "priority": 1000,
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.117.11.161",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-08-20T08:16:16.607-07:00",
            "id": "projects/iconic-monitor-468401-k0/global/addresses/ip-externo-fallback-global",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "ip-externo-fallback-global",
            "prefix_length": 0,
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/addresses/ip-externo-fallback-global"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/iconic-monitor-468401-k0/global/forwardingRules/fr-http-fallback-redirect-global",
            "ip_address": "34.117.11.161",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "fr-http-fallback-redirect-global",
            "port_range": "80-80",
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/forwardingRules/fr-http-fallback-redirect-global",
            "target": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/targetHttpProxies/http-proxy-redirect-global"
          },
          "dependencies": [
            "google_compute_global_address.lb_ip",
            "google_compute_target_http_proxy.http_proxy_redirect",
            "google_compute_url_map.url_map_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/iconic-monitor-468401-k0/global/forwardingRules/fr-https-fallback-global",
            "ip_address": "34.117.11.161",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "fr-https-fallback-global",
            "port_range": "443-443",
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/forwardingRules/fr-https-fallback-global",
            "target": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/targetHttpsProxies/https-proxy-fallback-global"
          },
          "dependencies": [
            "data.google_project.project",
            "google_artifact_registry_repository.proxy_repo",
            "google_compute_backend_service.backend_proxy",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.proxy_template",
            "google_compute_managed_ssl_certificate.ssl_certificate",
            "google_compute_network.vpc_hub",
            "google_compute_region_instance_group_manager.mig_proxy",
            "google_compute_subnetwork.subnet_hub",
            "google_compute_target_https_proxy.https_proxy",
            "google_compute_url_map.url_map_proxy",
            "google_dns_managed_zone.vitacare_fallback_zone",
            "google_dns_record_set.fallback_a_record",
            "google_iap_brand.project_brand",
            "google_iap_client.iap_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "mtu": 0,
            "name": "vpc-hub-inteligente",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4228996816138405367",
            "project": "iconic-monitor-468401-k0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-14T03:32:04.873-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iconic-monitor-468401-k0/regions/southamerica-east1/routers/router-hub-nat",
            "name": "router-hub-nat",
            "network": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "project": "iconic-monitor-468401-k0",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/routers/router-hub-nat"
          },
          "dependencies": [
            "google_compute_network.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "iconic-monitor-468401-k0/southamerica-east1/router-hub-nat/nat-gateway-vitacare",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-gateway-vitacare",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/addresses/ip-saida-vitacare"
            ],
            "project": "iconic-monitor-468401-k0",
            "region": "southamerica-east1",
            "router": "router-hub-nat",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/subnetworks/subnet-hub-proxies",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ip",
            "google_compute_network.vpc_hub",
            "google_compute_router.router_hub",
            "google_compute_subnetwork.subnet_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-14T04:07:20.340-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/iconic-monitor-468401-k0/regions/southamerica-east1/subnetworks/proxy-only-subnet",
            "ip_cidr_range": "10.10.1.0/26",
            "name": "proxy-only-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iconic-monitor-468401-k0",
            "purpose": "REGIONAL_MANAGED_PROXY",
            "region": "southamerica-east1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/subnetworks/proxy-only-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-14T03:32:06.438-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/iconic-monitor-468401-k0/regions/southamerica-east1/subnetworks/subnet-hub-proxies",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "subnet-hub-proxies",
            "network": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/networks/vpc-hub-inteligente",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iconic-monitor-468401-k0",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/regions/southamerica-east1/subnetworks/subnet-hub-proxies",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_hub"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-20T08:16:28.876-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/iconic-monitor-468401-k0/global/targetHttpProxies/http-proxy-redirect-global",
            "name": "http-proxy-redirect-global",
            "project": "iconic-monitor-468401-k0",
            "proxy_bind": false,
            "proxy_id": 3411499196351010851,
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/targetHttpProxies/http-proxy-redirect-global",
            "url_map": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/urlMaps/url-map-redirect-global"
          },
          "dependencies": [
            "google_compute_url_map.url_map_redirect"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "https_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-20T08:17:36.470-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/iconic-monitor-468401-k0/global/targetHttpsProxies/https-proxy-fallback-global",
            "name": "https-proxy-fallback-global",
            "project": "iconic-monitor-468401-k0",
            "proxy_bind": false,
            "proxy_id": 6116258802376923647,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/targetHttpsProxies/https-proxy-fallback-global",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/sslCertificates/cert-fallback-vitacare"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/urlMaps/url-map-proxy-global"
          },
          "dependencies": [
            "data.google_project.project",
            "google_artifact_registry_repository.proxy_repo",
            "google_compute_backend_service.backend_proxy",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.proxy_template",
            "google_compute_managed_ssl_certificate.ssl_certificate",
            "google_compute_network.vpc_hub",
            "google_compute_region_instance_group_manager.mig_proxy",
            "google_compute_subnetwork.subnet_hub",
            "google_compute_url_map.url_map_proxy",
            "google_dns_managed_zone.vitacare_fallback_zone",
            "google_dns_record_set.fallback_a_record",
            "google_iap_brand.project_brand",
            "google_iap_client.iap_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-20T08:17:24.051-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/backendServices/backend-service-proxy-global",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "nhThQ1DD3Ww=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/iconic-monitor-468401-k0/global/urlMaps/url-map-proxy-global",
            "map_id": 7165335423764945388,
            "name": "url-map-proxy-global",
            "path_matcher": [],
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/urlMaps/url-map-proxy-global",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_project.project",
            "google_artifact_registry_repository.proxy_repo",
            "google_compute_backend_service.backend_proxy",
            "google_compute_health_check.http_health_check",
            "google_compute_instance_template.proxy_template",
            "google_compute_network.vpc_hub",
            "google_compute_region_instance_group_manager.mig_proxy",
            "google_compute_subnetwork.subnet_hub",
            "google_iap_brand.project_brand",
            "google_iap_client.iap_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-08-20T08:16:16.624-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "xAWpS-GQI40=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/iconic-monitor-468401-k0/global/urlMaps/url-map-redirect-global",
            "map_id": 816176001272272943,
            "name": "url-map-redirect-global",
            "path_matcher": [],
            "project": "iconic-monitor-468401-k0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iconic-monitor-468401-k0/global/urlMaps/url-map-redirect-global",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}